main.css
/*
Available font families:

SUBTITLE FONTS:
    font-family: "Josefin Sans", serif;
    font-family: "Quicksand", sans-serif;
    font-family: "Montserrat", sans-serif;

BODY FONTS:
*/

/* UNIVERSAL */

html {
    height:100%;
    margin:0;
}

body {
    margin:0;
    min-height:100%;
    height:100%;
    background-color:#2C9BDF;
}

header {
    position:fixed;
    width:100%;
    height:72px;
    background:#fdfdfd;
    z-index:999;
}

#headershadow {
    position:fixed;
    padding-top:72px;
    width:100%;
    height:4px;
    background:#c0c0c0;
    z-index:998;
}

#navbar {
    font-family: "Montserrat", sans-serif;
    text-align:left;
    font-size:18px;
    margin-top:26px;
}
#navbar a:link {text-decoration: none; color:#222;}
#navbar a:visited {text-decoration: none; color:#222;}
#navbar a:hover {text-decoration: none; color:#999;}
#navbar a:active {text-decoration: none; color:#bbb;}
#navbar li {list-style: none;}
#navbar ul {
    display:inline;
    margin-left:28px;
    margin-right:0px;
    padding:0;
}
#navbar a.nav-current-page {
    color:#999;
}

#navicon {
    display:none;
    width:100%;
    table-layout: fixed;
}
#navicon span {
    display:table-cell;
    text-align:center;
    vertical-align:middle;
}
#navicon a.nav-header-img {
    vertical-align:middle;
    float:left;
    width:64px;
    height:64px;
    margin-left:4px;
    background:url("assets/josephroque_headshot_64x64.png");
}
#navicon a.nav-rollover {
    display:block;
    width:40px;
    text-decoration:none;
    float:center;
}
#navicon a.nav-rollover:hover {
    background-position:-40px;
}
#navicon a.nav-rollover-home {
    height:34px;
    background:url("assets/navigation/ic_home_48px.svg");
}
#navicon a.nav-rollover-about {
    height:40px;
    background:url("assets/navigation/ic_info_outline_48px.svg");
}
#navicon a.nav-rollover-work {
    height:32px;
    background:url("assets/navigation/ic_folder_open_48px.svg");
}
#navicon a.nav-rollover-contact {
    height:32px;
    background:url("assets/navigation/ic_mail_48px.svg");
}
#navicon a.nav-rollover-current-page {
    background-position:-40px;
}

.header-profile-img {
    margin-left:4px;
    margin-top:4px;
}

.uppercase {text-transform: uppercase;}

/* INDEX */

#index-content {
    padding-top:72px;
}

.index-main-banner {
    background:#ECECEC;
}

.index-main-banner h1 {
    font-family: "Quicksand", sans-serif;
    font-size: 24px;
    padding-left:10px;
    margin:0;
    text-align:right;
}

.index-main-banner h6 {
    font-family: "Montserrat", sans-serif;
    text-align:center;
    color:#000;
    margin:10px 0 0 0;
    padding:0;
}

.index-language-name {
    padding-left:2px;
    padding-right:2px;
    padding-top:2px;
    padding-bottom:2px;
    background-color:#d6d6d6;
}

.index-absolute-center {
    padding-top:72px;
    margin:auto;
    position:absolute;
    top:0; left:0; bottom:0; right:0;
}

/* ABOUT */

#about-content {
    padding-top:72px;
    margin-left:auto;
    margin-right:auto;
}

.about-section-banner {
    background: #ececec;
    width:48%;
    margin:10px 0.5% 0 1%;
    float:left;
}

.about-section-banner h1 {
    font-family: "Montserrat", sans-serif;
    padding:10px 10px 0 10px;
    margin-bottom:5px;
    margin-top:0;
}

.about-section-banner p {
    font-family: "Quicksand", sans-serif;
    margin:10px 10px 0 10px;
    padding-bottom:10px;
}

/* CONTACT */

#contact-content {
    padding-top:72px;
}

/* MOBILE DEVICES */

@media screen and (max-width:600px) {
    .vertically-centered-navigation-outer {display:table; height:72px; overflow:hidden; width:100%;}
    .vertically-centered-navigation-inner {display:table-cell; vertical-align: middle; width:100%;}
    .index-vertically-centered-banner-outer {display:table; height:300px; overflow:hidden;}
    .index-vertically-centered-banner-inner {display:table-cell; vertical-align: middle;}

    /* UNIVERSAL */

    #navbar {
        display:none;
    }

    #navicon {
        display:table;
    }

    .header-profile-img {
        display:none;
    }

    /* INDEX */

    .index-main-banner {
        height:300px;
    }

    .index-main-banner h1 {
        padding-right:10px;
        text-align:center;
    }

    .index-main-banner img {
        width:0px;
        height:0px;
        float:right;
    }

    .index-absolute-center {
        height:300px;
    }

    /* ABOUT */

    .about-section-banner {
        width:100%;
        float:none;
        margin-left:0;
        margin-right:0;
    }

    /*.about-section-banner-left {
        margin-left:0;
        margin-right:0;
    }

    .about-section-banner-right {
        margin-left:0;
        margin-right:0;
    }*/
}

/* MEDIUM SCREENS */

@media screen and (min-width:600px) and (max-width:1400px) {
    .index-vertically-centered-banner-outer {display:table; height:380px; overflow:hidden;}
    .index-vertically-centered-banner-inner {display:table-cell; vertical-align: middle;}

    /* INDEX */

    .index-main-banner {
        height:380px;
    }

    .index-main-banner img {
        width:380px;
        height:380px;
        float:right;
    }

    .index-absolute-center {
        height:380px;
    }
}

/* WIDESCREEN */

@media screen and (min-width:1400px) {
    .index-vertically-centered-banner-outer {display:table; height:500px; overflow:hidden;}
    .index-vertically-centered-banner-inner {display:table-cell; vertical-align: middle;}

    /* INDEX */

    .index-main-banner {
        height:500px;
    }

    .index-main-banner img {
        width:500px;
        height:500px;
        float:right;
    }

    .index-absolute-center {
        height:500px;
    }
}

